<resources>
    <string name="app_name">DAL</string>
    <string name="title_activity_form_registrar_usuarios">formRegistrarUsuarios</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">Home</string>
    <string name="Loren">Un kodama es un espíritu del folclore japonés que vive en un árbol. También se conoce como kodama al propio árbol donde habita uno de estos espíritus. Por otro lado, el fenómeno del eco, dentro del folclore japonés, también es conocido por este nombre
    Un kodama es un espíritu del folclore japonés que vive en un árbol. También se conoce como kodama al propio árbol donde habita uno de estos espíritus. Por otro lado, el fenómeno del eco, dentro del folclore japonés, también es conocido por este nombre
    </string>
    <string name="txt">txt</string>
    <string name="entradatxt">A continuación, te voy a hacer unas preguntas que me van a ayudar a conocer tus hábitos de lectura y de ese modo, juntos haremos que leer sea más agradable para ti. Por favor selecciona la respuesta a cada una de las preguntas y responda las casillas a rellenar sinceramente.</string>
    <string name="feedbacktype0">...</string>
    <string name="feedbacktype1">DISFRUTO</string>
    <string name="feedbacktype2">NO DISFRUTO</string>
    <string name="feedbacktypeuno">1</string>
    <string name="feedbacktypedos">2</string>
    <string name="feedbacktypetres">3</string>
    <string name="feedbacktypecuatro">4</string>
    <string name="feedbacktypecinco">5</string>
    <string name="feedbacktypeseis">6</string>
    <string name="feedbacktypesiete">MAS DE 6</string>
    <string name="feedbacktypesi">SI</string>
    <string name="feedbacktypeno">NO</string>
    <string name="feedbacktypePoesia">POESIA</string>
    <string name="feedbacktypeCuentos">CUENTOS</string>
    <string name="feedbacktypeEnsayos">ENSAYOS</string>
    <string name="feedbacktypeNovelas">NOVELAS</string>
    <string name="feedbacktypeRevistas">REVISTAS</string>
    <string name="feedbacktypeComics">COMICS</string>
    <string name="feedbacktypeOtros">OTROS</string>
    <string name="feedbacktypemuyalto">ALTO</string>
    <string name="feedbacktypealto">MUY ALTO</string>
    <string name="feedbacktypebasico">BASICO</string>
    <string name="feedbacktypebajo">BAJO</string>
    <string name="feedbacktypemuybajo">MUY BAJO</string>
    <string name="feedbacktypeentreprimeras">ENTRE LAS PRIMERAS</string>
    <string name="feedbacktypeentreultimas">ENTRE LAS ULTIMAS</string>
    <string name="feedbacktype16uno">FALTA DE CONCENTRACION</string>
    <string name="feedbacktype16dos">NO COMPRENDER EL VOCABULARIO</string>
    <string name="feedbacktype16tres">NO IDENTIFICAR EL TEMA DEL TEXTO</string>
    <string name="feedbacktype16cuatro">NO IDENTIFICAR LAS IDEAS PRINCIPALES O SECUNDARIAS</string>
    <string name="feedbacktype16cinco">LA FALTA DE MOTIVACION</string>
    <string name="feedbacktype16seis">FALTA DE COMPRENSION DE ORTOGRAFIA Y PUNTUACION</string>
    <string name="feedbacktype18uno">VAS A LA BIBLIOTECA</string>
    <string name="feedbacktype18dos">DESCARGAS LAS LECTURA EN EL CELULAR</string>
    <string name="feedbacktype18tres">COMPRAS UN LIBRO</string>
    <string name="feedbacktype18cuatro">LO PIDES PRESTADO</string>
    <string name="feedbacktype19uno">TIENES GANAS</string>
    <string name="feedbacktype19dos">TE OBLIGAN TUS PADRES</string>
    <string name="feedbacktype19tres">TE OBLIGAN LOS PROFESORES</string>
    <string name="feedbacktype19cuatro">NECESITO UNA BUENA CALIFICACION</string>
    <string name="feedbacktype20uno">PIERDES TIEMPO</string>
    <string name="feedbacktype20dos">ES PLACENTERO</string>
    <string name="feedbacktype20tres">ESTAS APRENDIENDO</string>
    <string name="feedbacktype20cuatro">NO COMPRENDES NADA</string>
    <string name="feedbacktypeOtra">OTRA</string>
    <string name="pregunta_1">Cuando lees, ¿disfrutas con la lectura o la consideras una actividad no placentera?</string>
    <string name="pregunta_2">¿Cuántos libros has leído en el tiempo de pandemia?</string>
    <string name="pregunta_3">¿Has leído alguna vez un ensayo voluntariamente?</string>
    <string name="pregunta_4">¿En qué asignatura los profesores suelen enviarte lecturas? Menciónalas.</string>
    <string name="pregunta_5">¿Cuántos libros leíste durante el último curso escolar?</string>
    <string name="pregunta_6">¿Qué lugar ocupa la lectura entre las actividades que realizas en tu tiempo libre?</string>
    <string name="pregunta_7">¿Crees que el hábito de la lectura influye en tu rendimiento académico?</string>
    <string name="pregunta_8">¿Consideras que la institución ha despertado en ti el interés por la lectura?</string>
    <string name="pregunta_9">¿Consideras útil que el colegio programe una serie de actividades con el objeto de despertar en ti el interés por la lectura? Indica alguna actividad que creas positiva:</string>
    <string name="pregunta_10">¿Qué tipo de textos prefieres para tu lectura? Indica por qué lo prefieres:</string>
    <string name="pregunta_11">¿Consideras que el ensayo es un texto difícil y aburrido de comprender?</string>
    <string name="pregunta_12">¿Hablas o comentas con alguien acerca de lo que lees?</string>
    <string name="pregunta_13">¿Consideras que la familia influye en tus hábitos de lectura?</string>
    <string name="pregunta_14">¿Piensas que la lectura es tu fuente principal de conocimiento?</string>
    <string name="pregunta_15">¿Cómo calificarías tu nivel de comprensión lectora?</string>
    <string name="pregunta_16">¿Cuáles son los problemas que consideras que dificultan la comprensión lectora? Puedes escoger varias opciones.</string>
    <string name="pregunta_17">Si comparamos las horas que dedicas a la lectura con las que usas tu celular, ¿en qué proporción las situarías?. Por 1 hora de lectura;</string>
    <string name="pregunta_18">Cuando deseas leer tu:</string>
    <string name="pregunta_19">Lees Cuando:</string>
    <string name="pregunta_20">Generalmente cuando lees ensayos sientes que:</string>
    <string name="pre1_pa1_ta4">
        1. ¿Cuál de los siguientes enunciados resume mejor el contenido del primer párrafo?
    </string>
    <string name="res1a_pa1_ta4">
            a. La generación del 98 nació como una celebración al gran momento histórico que estaba atravesando España
        </string>
    <string name="res1b_pa1_ta4">
            b. La generación del 98 pretendía crear un movimiento social con el fin de recuperar el poder en Cuba, Puerto Rico y Filipinas.
        </string>
    <string name="res1c_pa1_ta4">
            c. El nacimiento de La generación de 98 se dio como una estrategia del gobierno para que la población española no entrara en pánico durante la crisis.
        </string>
    <string name="res1d_pa1_ta4">
            d. La generación del 98 surgió a través de la literatura como una manera revolucionaria de demostrar la inconformidad de algunos pensadores.
        </string>
    <string name="pre2_pa1_ta4">
       2. La frase en la que el texto describe la situación del país “como una España con brillo engañoso” se refiere a:
    </string>
    <string name="res2a_pa1_ta4">
                a. Aparentemente el país se encontraba muy estable, pero en realidad estaba sufriendo una crisis de carácter político, social y económico.
            </string>
    <string name="res2b_pa1_ta4">
                b. En apariencia los habitantes españoles eran muy poderosos, fuertes y felices, pero en realidad eran débiles y tenían miedo.
            </string>
    <string name="res2c_pa1_ta4">
                c. Aparentemente en España había crisis y tragedia, pero en realidad, todo era parte del plan para convertirse de nuevo en una potencia mundial.
            </string>
    <string name="res2d_pa1_ta4">
                d. En apariencia España tenía crisis política, social y económica, pero en realidad estaba viviendo uno de sus mejores momentos históricos.
        </string>
    <string name="pre3_pa1_ta4">
        3. Los escritores de La generación del 98 usaban un lenguaje sencillo en sus escritos porque…
    </string>
    <string name="res3a_pa1_ta4">
                a.	Necesitaban despistar al enemigo.
            </string>
    <string name="res3b_pa1_ta4">
                b. Pretendían que sus textos fueran muy claros para que todas las personas los comprendieran.
            </string>
    <string name="res3c_pa1_ta4">
                c. No estaban suficientemente educados para usar un léxico más complicado y formal.
            </string>
    <string name="res3d_pa1_ta4">
                d. Debían utilizar muy poco papel ya que por la situación del país debían ahorrar.
        </string>
    <string name="pre1_pa4_ta4">
        1. De acuerdo con el texto, se puede afirmar que las dimensiones de la lectura corresponden a…
    </string>
    <string name="res1a_pa4_ta4">
            a. Una serie de recursos a los cuales acude el lector para comprender un texto.
        </string>
    <string name="res1b_pa4_ta4">
            b. Las partes que debe tener un texto para que el lector pueda comprenderlo.
        </string>
    <string name="res1c_pa4_ta4">
            c. Las características del proceso lector.
        </string>
    <string name="res1d_pa4_ta4">
            d. Los niveles básicos para conseguir la comprensión lectora.
        </string>
    <string name="pre2_pa4_ta4">
       2. Por medio de la primera dimensión (lectura de las líneas) el lector puede:
    </string>
    <string name="res2a_pa4_ta4">
            a. Reconocer una frase que tiene doble sentido
        </string>
    <string name="res2b_pa4_ta4">
            b. Identificar cuál es la idea principal del texto.
        </string>
    <string name="res2c_pa4_ta4">
            c. Dar su opinión acerca del texto.
        </string>
    <string name="res2d_pa4_ta4">
            d. Saber cuál era la intensión del autor al escribir el texto.
        </string>
    <string name="pre3_pa4_ta4">
       3. Por medio de la tercera dimensión (lectura tras las líneas) el lector puede:
    </string>
    <string name="res3a_pa4_ta4">
            a. Reconocer una frase que tiene doble sentido
        </string>
    <string name="res3b_pa4_ta4">
            b. Identificar cuál es la idea principal del texto.
        </string>
    <string name="res3c_pa4_ta4">
            c. Dar su opinión acerca del texto.
        </string>
    <string name="res3d_pa4_ta4">
            d. Todas las anteriores.
        </string>
    <string name="pre4_pa4_ta4">
       4. Por medio de la tercera dimensión (lectura entre líneas) el lector puede:
    </string>
    <string name="res4a_pa4_ta4">
                        a. Reconocer una frase que tiene doble sentido.
        </string>
    <string name="res4b_pa4_ta4">
                        b. Identificar cuál es la idea principal del texto.
        </string>
    <string name="res4c_pa4_ta4">
                        c. Dar su opinión acerca del texto.
        </string>
    <string name="res4d_pa4_ta4">
                        d. Saber cuál era la intensión del autor al escribir el texto.
        </string>
</resources>